kubernetes-manifests/svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: myapp
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 3001
