kubernetes-manifests/svc-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: myapp
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
